<?xml version="1.0" encoding="utf-8"?>
<!--The values for the drawable items, dimen, string and color values are added in their respective folders and files.-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlVar1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">


    <!-- <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_levels_activity"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize">

         <TextView
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:text="Back"
             android:textColor="@color/primary_text_color"
             android:textSize="@dimen/toolbar_title_text_size"
             android:textStyle="bold" />

     </androidx.appcompat.widget.Toolbar>-->

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/level_subheading"
             android:gravity="center"
             android:textSize="25sp"
             android:layout_marginTop="100dp"
             android:textColor="@color/secondary_text_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/card_view_layout_content_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/btnSpeak1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:src="@drawable/ic_sound"
                android:text="@string/sound_level_1"
                android:textColor="@android:color/white"
                android:textSize="18sp">

            </ImageButton>

            <Button
                android:id="@+id/btn_level_1"
                android:layout_width="344dp"
                android:layout_height="84dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_level1"
                android:text="@string/level_1"
                android:textColor="@android:color/white"
                android:textSize="18sp">

            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/btnSpeak2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sound"
                android:layout_gravity="right"
                android:textColor="@android:color/white"
                android:textSize="18sp"></ImageButton>

            <Button
                android:id="@+id/btn_level_2"
                android:layout_width="344dp"
                android:layout_height="84dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_level2"
                android:gravity="center"
                android:text="@string/level_2"
                android:textColor="@android:color/white"
                android:textSize="18sp">

            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/btnSpeak3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sound"
                android:layout_gravity="right"
                android:textColor="@android:color/white"
                android:textSize="18sp"></ImageButton>

            <Button
                android:id="@+id/btn_level_3"
                android:layout_width="344dp"
                android:layout_height="84dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_level3"
                android:gravity="center"
                android:saveEnabled="true"
                android:text="@string/level_3"
                android:textColor="@android:color/white"
                android:textSize="18sp">

            </Button>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>



