<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_results_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/toolbar_title_text_size"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/authentication_screen_content_marginTop"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_trophy"
            android:layout_width="74dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:src="@drawable/silvertrophy" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Result"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/primary_text_color"
        android:textSize="25sp"
        android:textStyle="bold" />


        <ImageButton
            android:id="@+id/btnSpeak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:src="@drawable/ic_sound"
            android:text="@string/result_text"
            android:textColor="@android:color/white"
            android:textSize="18sp">

        </ImageButton>
    <TextView
        android:id="@+id/tv_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/result_text"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="20sp"
        tools:text="You Scored 4 out of 5" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/result_continue"
        android:drawableRight="@drawable/ic_forward"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/result_skip"
            android:drawableLeft="@drawable/ic_goback"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>