<?xml version="1.0" encoding="utf-8"?>
<!--The values for the drawable items, dimen, string and color values are added in their respective folders and files.-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    tools:context=".activities.communications.CommunicationsLessonsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_communications_menu_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/tv_levels_margin"
            android:layout_marginTop="15dp"
            android:textColor="@color/white_text_color"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="center"
      android:layout_marginTop="@dimen/authentication_screen_content_marginTop"
      android:orientation="vertical">

      <ImageView
          android:id="@+id/iv_book_icon"
          android:layout_width="74dp"
          android:layout_height="65dp"
          android:layout_gravity="center"
          android:src="@drawable/ic_alalogo" />

      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="50dp"
          android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
          android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
          android:elevation="@dimen/card_view_elevation"
          app:cardCornerRadius="@dimen/card_view_corner_radius">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/card_view_layout_content_padding">


          <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="16dp">

          <Button
              android:id="@+id/btn_communications_reading"
              android:layout_width="match_parent"
              android:layout_height="40dp"
              android:background="@drawable/shape_button_rounded"
              android:text="@string/communication_level_2_lessons1"
              android:textColor="@android:color/white"
              android:textSize="18sp">
          </Button>


              <!--< <LinearLayout
                   android:id="@+id/ll_progress_words"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="5dp"
                   android:gravity="center_vertical"
                   android:orientation="horizontal">

                   <ProgressBar
                       android:id="@+id/progressReadingWords"
                       style="?android:attr/progressBarStyleHorizontal"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:indeterminate="false"
                       android:max="5"
                       android:minHeight="20dp"
                       android:progress="0" />

                   <TextView
                       android:id="@+id/tv_progressReadingWords"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:gravity="center"
                       android:padding="2dp"
                       android:textColorHint="@color/colorPrimary"
                       android:textSize="12sp"
                       tools:text="0/10" />
               </LinearLayout>-->

           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:padding="16dp">

               <Button
                   android:id="@+id/btn_communications_writing"
                   android:layout_width="match_parent"
                   android:layout_height="40dp"
                   android:foreground="?attr/selectableItemBackground"
                   android:text="@string/communication_level_2_lessons2"
                   android:textColor="@android:color/white"
                   android:textSize="18sp">
               </Button>

               <!--<  <LinearLayout
                     android:id="@+id/ll_progress_rules"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
                     android:layout_marginTop="5dp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">

                     <ProgressBar
                         android:id="@+id/progressRules"
                         style="?android:attr/progressBarStyleHorizontal"
                         android:layout_width="0dp"
                         android:layout_height="30dp"
                         android:layout_weight="1"
                         android:padding="15dp"
                         android:indeterminate="false"
                         android:max="10"
                         android:progress="0" />

                     <TextView
                         android:id="@+id/tv_progressRules"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:padding="5dp"
                         android:textColorHint="#7A8089"
                         android:textSize="12sp"
                         tools:text="0/10" />
                 </LinearLayout>-->

             </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="16dp">

                 <Button
                     android:id="@+id/btn_personal_skills"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:foreground="?attr/selectableItemBackground"
                     android:text="@string/communication_level_2_lessons3"
                     android:textColor="@android:color/white"
                     android:textSize="18sp">
                 </Button>

                 <!--<    <LinearLayout
                         android:id="@+id/ll_progress_texts"
                         android:layout_width="match_parent"
                         android:layout_height="20dp"
                         android:layout_marginTop="5dp"
                         android:gravity="center_vertical"
                         android:orientation="horizontal">

                         <ProgressBar
                             android:id="@+id/progressReadingTexts"
                             style="?android:attr/progressBarStyleHorizontal"
                             android:layout_width="0dp"
                             android:layout_height="20dp"
                             android:layout_weight="1"
                             android:padding="15dp"
                             android:indeterminate="false"
                             android:max="10"
                             android:progress="0" />

                         <TextView
                             android:id="@+id/tv_progressReadingTexts"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:gravity="center"
                             android:padding="5dp"
                             android:textColorHint="#7A8089"
                             android:textSize="12sp"
                             tools:text="0/10" />
                     </LinearLayout>-->

                 </LinearLayout>

                           </LinearLayout>

                       </androidx.cardview.widget.CardView>

                   </LinearLayout>

                 </LinearLayout>
